syntax = "proto3";

package pb;

option go_package = ".;pb";

import "message_login_user.proto";
import "message_create_user.proto";
import "message_list_user.proto";

service Accounts {
  rpc LoginUser(LoginRequest) returns (LoginResponse) {};
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc ListUser(ListUserRequest) returns (ListUserRespose) {};
}