syntax = "proto3";

package usermgmt;


option go_package = ".;pb";


service UserManagement { 
  rpc CreateNewUser (Newuser) returns (User) {}
}

message Newuser {
  string name = 1;
  int32 age=2;
}

message User {
  string name = 1;
  int32 age=2;
  int32 id=3;
} 